--- a/ProjetoCheckBike/src/main/webapp/cadastroOficina.xhtml
+++ b/ProjetoCheckBike/src/main/webapp/cadastroOficina.xhtml
@@ -15,6 +15,8 @@
 
 <h:body styleClass="body">
 
+	<p:growl id="msgGlobal" life="4000"></p:growl>
+
 	<h:form>
 		<div class="geral loginConteudo ">
 			<h1>Cadastro de Oficinas</h1>
@@ -28,8 +30,8 @@
 			</div>
 			<div class="CamposCadOficina">
 				<h:outputLabel value="CNPJ" styleClass="fontLetra" />
-				<p:inputText id="campoCnpj" styleClass="inputText"
-					value="#{MBOficina.oficina.cnpj}" />
+				<p:inputMask id="campoCnpj" styleClass="inputText"
+					value="#{MBOficina.oficina.cnpj}" mask="99.999.99/9999-99"/>
 			</div>
 			<div class="CamposCadOficina">
 				<h:outputLabel value="E-mail" styleClass="fontLetra" />
@@ -70,13 +72,13 @@
 
 			<div class="CamposCadOficina">
 				<h:outputLabel class="campoContato" value="Contato" />
-				<p:inputText id="campoContato" styleClass="inputText"
-					value="#{MBOficina.oficina.contato}" />
+				<p:inputMask id="campoContato" styleClass="inputText"
+					value="#{MBOficina.oficina.contato}" mask="(99)99999-9999" />
 			</div>
 
 			<div class="CamposCadOficina">
 				<h:outputLabel class="campoSenha" value="Senha" />
-				<p:inputText id="campoSenha" styleClass="inputText"
+				<p:password id="campoSenha" styleClass="inputText"
 					value="#{MBOficina.oficina.senha}" />
 			</div>
 
