--- a/ProjetoCheckBike/src/main/webapp/cadastroUsuario.xhtml
+++ b/ProjetoCheckBike/src/main/webapp/cadastroUsuario.xhtml
@@ -14,10 +14,116 @@
 </h:head>
 
 <h:body styleClass="body">
-	
-		<h:form>
-		<h:commandButton value="Aqui" action="#{testeBean.salvarTeste}" />
-		</h:form>
+
+		<p:growl id="msgGlobal" life="4000"></p:growl>
+
+	<h:form>
+		<div class="loginConteudo ">
+			<h1>Cadastro de Usuário</h1>
+
+			<div class="CamposOficina">
+				<h:outputLabel value="Nome Completo" />
+				<p:inputText id="campoNome" styleClass="inputText"
+					value="#{MBCliente.clienteNovo.nome}">
+
+				</p:inputText>
+			</div>
+			<div class="CamposOficina">
+				<h:outputLabel value="CPF" styleClass="fontLetra" />
+				<p:inputMask id="campoCpf" styleClass="inputText"
+					value="#{MBCliente.clienteNovo.cpf}"  mask="999.999.999-99"/>
+			</div>
+			<div class="CamposOficina">
+				<h:outputLabel value="E-mail" styleClass="fontLetra" />
+				<p:inputText id="campoEmail" styleClass="inputText"
+					value="#{MBCliente.clienteNovo.email}" />
+			</div>
+
+			<div class="CamposOficina">
+				<h:outputLabel class="dtNascimento" value="Data de Nascimento" />
+				<br></br>
+				<p:calendar style="width: 95% !important" id="popup" value="#{MBCliente.clienteNovo.nascimento}" />
+			</div>
+
+			<div class="CamposOficina">
+				<h:outputLabel class="campoSexo" value="Sexo" />
+				<p:selectOneMenu id="optionSexo" style="width: 95% !important"
+					value="#{MBCliente.clienteNovo.sexo}">
+					<f:selectItem itemLabel="Selecione o Sexo" itemValue="" />
+					<f:selectItem itemLabel="Masculino" itemValue="M" />
+					<f:selectItem itemLabel="Feminino" itemValue="F" />
+					<f:selectItem itemLabel="Outros" itemValue="O" />
+				</p:selectOneMenu>
+			</div>
+
+			<div class="CamposOficina">
+				<h:outputLabel class="campoEstado" value="Estado" />
+				<p:inputText id="campoEstado" styleClass="inputText" maxlength="2"
+					value="#{MBCliente.clienteNovo.estado}" />
+			</div>
+
+			<div class="CamposOficina">
+				<h:outputLabel class="campoBairro" value="Bairro" />
+				<p:inputText id="campoBairro" styleClass="inputText"
+					value="#{MBCliente.clienteNovo.bairro}" />
+			</div>
+
+			<div class="CamposOficina">
+				<h:outputLabel class="campoCidade" value="Cidade" />
+				<p:inputText id="campoCidade" styleClass="inputText"
+					value="#{MBCliente.clienteNovo.cidade}" />
+			</div>
+
+			<div class="CamposOficina">
+				<h:outputLabel class="campoRua" value="Rua" />
+				<p:inputText id="campoRua" styleClass="inputText"
+					value="#{MBCliente.clienteNovo.rua}" />
+			</div>
+
+			<div class="CamposOficina">
+				<h:outputLabel class="campoNumero" value="Número" />
+				<p:inputText id="campoNumero" styleClass="inputText"
+					value="#{MBCliente.clienteNovo.numero}" />
+			</div>
+
+
+			<div class="CamposOficina">
+				<h:outputLabel class="campoSenha" value="Senha" />
+				<p:password id="campoSenha" styleClass="inputText"
+					value="#{MBCliente.clienteNovo.senha}" />
+			</div>
+
+			<div class="CamposOficina">
+				<h:outputLabel class="campoContato" value="Contato" />
+				<p:inputMask id="campoContato" styleClass="inputText"
+					value="#{MBCliente.clienteNovo.contato}" mask="(99)99999-9999"/>
+			</div>
+			<div>
+				<h:messages id="mensagens" />
+				<h:commandButton value="Salvar" styleClass="botaoProximo"
+					action="#{MBCliente.novoCliente}" update="msgGlobal">
+				
+				</h:commandButton>
+				<h:commandButton value="Voltar" styleClass="botaoVoltar"
+					actionListener="#" />
+
+
+			</div>
+		</div>
+
+	</h:form>
+<!-- 	
+	<h:form id="GlobalErrorPanel">
+	<p:dialog widgetVar="ERROR" closable="false" resizable="false" draggable="false" id="exceptionDlg" >
+		<h:panelGroup rendered="#{not empty myBean.errorMsg}">
+			<h:outputText value="An error has occured!!"/>
+			<ul style="text-align: left;">                        
+				<li>Exception Message: <strong>#{myBean.errorMsg.getErrorMessage()}</strong></li>
+			</ul>
+		</h:panelGroup>
+	</p:dialog> 
+</h:form>-->
 </h:body>
 
 </html>
+
